[project]
name = "ampel-hu-astro"
version = "0.10.0a18"
description = "Astronomy units for the Ampel system from HU-Berlin"
requires-python = ">=3.12, <4"
authors = [
    { name = "Valery Brinnel" },
    { name = "Jakob van Santen", email = "jakob.van.santen@desy.de" },
    { name = "Sjoert van Velzen" },
    { name = "Jakob Nordin" },
    { name = "Matteo Giomi" },
]
maintainers = [
    { name = "Jakob van Santen", email = "jakob.van.santen@desy.de" },
]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "ampel-interface (>=0.10.4.post2,<0.11)",
    "ampel-plot (>=0.9.2a0,<0.10.0)",
    "ampel-photometry (>=0.10.1,<0.11.0)",
    "ampel-alerts (>=0.10.3,<0.11.0)",
    "ampel-catalogmatch (>=0.10.0a3,<0.11.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "astropy (>=7.2.0,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2)",
    "adjusttext (>=1.3.0,<2.0.0)",
    "more-itertools (>=10.8.0,<11.0.0)",
    "uncertainties (>=3.2.3,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
]

[project.optional-dependencies]
elasticc = [
    "xgboost (>=3.1.2,<4.0.0)",
    "astro-parsnip (>=1.4.3,<2.0.0)",
    "timeout-decorator (>=0.5.0,<0.6.0)",
    "ampel-lsst (>=0.10.1a7,<0.11)",
    "light-curve (>=0.10.5,<0.11.0)",
    "extinction (>=0.4.8,<0.5.0)",
]
extcats = ["extcats (>=2.5.0,<3.0.0)"]
ligo = [
    "healpy (>=1.19.0,<2.0.0)",
    "sncosmo (>=2.12.1,<3.0.0)",
    "iminuit (>=2.32.0,<3.0.0)",
    "sfdmap2 (>=0.2.2.post3,<0.3.0)",
    "ligo-gracedb (>=2.14.3,<3.0.0)",
    "ampel-ztf (>=0.10.3a7,<0.11.0)",
]
slack = ["slack-sdk (>=3.39.0,<4.0.0)"]
sncosmo = [
    "sncosmo (>=2.12.1,<3.0.0)",
    "iminuit (>=2.32.0,<3.0.0)",
    "sfdmap2 (>=0.2.2.post3,<0.3.0)",
]
snpy = ["snpy (>=2.7.0,<3.0.0)"]
ztf = [
    "ampel-ztf (>=0.10.3a7,<0.11.0)",
    "ztfquery (>=1.28.0,<2.0.0)",
]
lsst = ["ampel-lsst (>=0.10.1a13,<0.11)"]
hop = [
    "hop-client (>=0.12.1,<0.13.0)",
    "py-avro-schema (>=3.8.2,<4.0.0)",
]
lasair = ["lasair (>=0.1.2,<0.2.0)"]
[dependency-groups]
dev = [
    "pytest-ampel-core (>=0.10.0a7,<0.11)",
    "mypy (>=1.13,<2.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)",
    "types-pytz (>=2025.2.0.20251108,<2026.0.0.0)",
    "types-pillow (>=10.2.0.20240822,<11.0.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "pandas-stubs (>=2.3.3.251201,<3.0.0.0)",
    "scipy-stubs (>=1.16.3.3,<2.0.0.0)",
    "types-seaborn (>=0.13.2.20251214,<0.14.0.0)",
    "syrupy (>=5.0.0,<6.0.0)",
]

[tool.poetry]
packages = [
    {include = "ampel"},
]
exclude = ["ampel/py.typed"]

[project.urls]
homepage = "https://ampelproject.github.io"
repository = "https://github.com/AmpelAstro/Ampel-HU-astro"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=40.8.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

# tailor torch installation to platform
[tool.poetry.group.torch-cpu.dependencies]
torch = [
   {version = "*", markers = 'sys_platform == "linux"', source="torch-cpu", optional = true},
   {version = "*", markers = 'sys_platform == "darwin" and platform_machine != "x86_64"', optional = true},
   {version = "<2.2", markers = 'sys_platform == "darwin" and platform_machine == "x86_64"', optional = true}
]

[tool.poetry.group.notebook.dependencies]
jupyter = {version = "^1.0.0", optional = true}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--showlocals -ra"
filterwarnings = [
    "error",
    "always:numpy.ndarray size changed:RuntimeWarning",
    # LaTeX in snpy docstrings
    "default:invalid escape sequence:SyntaxWarning",
    # dangling fits file in snpy
    "default:unclosed:ResourceWarning",
    "ignore:Deprecated call to `pkg_resources.declare_namespace\\('ligo'\\):DeprecationWarning",
    "ignore:pkg_resources is deprecated:DeprecationWarning",
    "ignore:(?s).*Pyarrow will become a required dependency of pandas:DeprecationWarning",
    "ignore:Python 3.14 will, by default, filter extracted tar archives and reject files or modify their metadata.:DeprecationWarning:sncosmo",
    # Trying to unpickle estimator LabelEncoder from version 1.0.2 when using version 1.8.0. This might lead to breaking code or invalid results.
    "default::sklearn.exceptions.InconsistentVersionWarning",
    "default:Creating a tensor from a list of numpy.ndarrays is extremely slow:UserWarning",
    "default:X does not have valid feature names, but LGBMClassifier was fitted with feature names:UserWarning",
]

[tool.mypy]
packages = ["ampel"]
namespace_packages = true
show_error_codes = true
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "adjustText.*",
  "astropy.*",
  "confluent_kafka.*",
  "extcats.*",
  "healpy.*",
  "hop.*",
  "joblib.*",
  "lcdata.*",
  "light_curve.*",
  "ligo.*",
  "parsnip.*",
  "requests_toolbelt.*",
  "sncosmo.*",
  "timeout_decorator.*",
  "ztfquery.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    "ampel/contrib/hu/xgb_trees.py",
    "notebooks",
    "scripts",
    "setup.py",
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP", # pyupgrade
    "B", # bugbear
    "DTZ", # datetimez
    "T20", # print statements
    # "PT", # pytest-style
    "RET", # return
    "SLF",
    "SIM",
    # "ARG", # sometimes your arguments have to conform to an interface
    # "ERA", # seems to prohibit all comments, that's bad
    "PL",
    "PERF",
    "RUF",
]
ignore = [
    "E741", # ambiguous variable name
    "UP009", # UTF-8 encoding declaration is unnecessary
    "PLR09", # too many (arguments|branches)
    "PLR2004", # Magic value used in comparison
    "RUF012", # fine for AmpelUnit, actually (ruff has a special case for pydantic)
    "RUF023", # unsorted __slots__ are fine
]

[tool.ruff.lint.isort]
known-first-party = ["ampel"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "RUF018",  # assignment in assert is just fine in tests
    "SLF001",  # allow private member access
    "T201",    # allow print()
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
